--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,14 @@
 # Copy this file to .env and fill in your API keys
 
 # LLM Provider API Keys (at least one required)
-GOOGLE_API_KEY=AIzaSyDk--6cXk80sXa23vhmtqYB9FwUkDxvHT4
-GROQ_API_KEY=your_groq_api_key_here
-HUGGINGFACE_API_KEY=your_huggingface_api_key_here
+# Get your Google AI Studio API key from: https://makersuite.google.com/app/apikey
+GOOGLE_API_KEY=AIza_REPLACE_WITH_YOUR_ACTUAL_GOOGLE_API_KEY
+
+# Get your Groq API key from: https://console.groq.com/keys  
+GROQ_API_KEY=gsk_REPLACE_WITH_YOUR_ACTUAL_GROQ_API_KEY
+
+# Get your HuggingFace API key from: https://huggingface.co/settings/tokens
+HUGGINGFACE_API_KEY=hf_REPLACE_WITH_YOUR_ACTUAL_HUGGINGFACE_TOKEN
 
 # Vector Database Settings
 VECTOR_DB_PATH=./data/vector_store
