--- a/.env.example
+++ b/.env.example
@@ -1,32 +1,24 @@
-# Multi-Agent Decision System Configuration
-# Copy this file to .env and fill in your API keys
+# Google AI API Key (required)
+GOOGLE_API_KEY=your_google_api_key_here
 
-# LLM Provider API Keys (at least one required)
-# Get your Google AI Studio API key from: https://makersuite.google.com/app/apikey
-GOOGLE_API_KEY=AIza_REPLACE_WITH_YOUR_ACTUAL_GOOGLE_API_KEY
+# FAISS Index Storage Path
+FAISS_INDEX_PATH=./data/faiss_index
 
-# Get your Groq API key from: https://console.groq.com/keys  
-GROQ_API_KEY=gsk_REPLACE_WITH_YOUR_ACTUAL_GROQ_API_KEY
-
-# Get your HuggingFace API key from: https://huggingface.co/settings/tokens
-HUGGINGFACE_API_KEY=hf_REPLACE_WITH_YOUR_ACTUAL_HUGGINGFACE_TOKEN
-
-# Vector Database Settings
-VECTOR_DB_PATH=./data/vector_store
+# Embedding Model Configuration
 EMBEDDING_MODEL=all-MiniLM-L6-v2
 
-# File Processing Settings
-MAX_FILE_SIZE_MB=50
-SUPPORTED_FILE_TYPES=["csv", "json", "txt"]
+# LLM Configuration
+LLM_TEMPERATURE=0.7
+LLM_MAX_TOKENS=1000
 
-# Agent Settings
-MAX_OPTIONS_RETURNED=5
-SIMILARITY_THRESHOLD=0.7
+# Search Configuration
+SEARCH_TOP_K=5
+RELEVANCE_THRESHOLD=0.7
 
-# LLM Settings
-LLM_TEMPERATURE=0.1
-MAX_TOKENS=1000
+# Retry Configuration
+MAX_RETRIES=3
+RETRY_DELAY=1.0
+MAX_RETRY_DELAY=60.0
 
-# Interface Settings
+# UI Configuration
 STREAMLIT_PORT=8501
-DEBUG_MODE=false
