--- a/requirements.txt
+++ b/requirements.txt
@@ -1,39 +1,38 @@
 # Core LangChain and LangGraph dependencies
-langchain>=0.1.0
-langchain-community>=0.0.13
-langchain-core>=0.1.7
-langgraph>=0.0.20
+langchain==0.1.0
+langchain-community==0.0.10
+langchain-core==0.1.0
+langgraph==0.0.20
 
-# Vector database and embeddings
-faiss-cpu>=1.8.0
-sentence-transformers>=2.2.0
+# Google AI integration
+langchain-google-genai==0.0.6
+google-generativeai==0.3.2
+
+# Vector storage and embeddings
+faiss-cpu==1.7.4
+sentence-transformers==2.2.2
+
+# UI framework
+streamlit==1.29.0
 
 # Data processing
-pandas>=2.0.0
-numpy>=1.25.0
+pandas==2.1.4
+numpy==1.24.3
 
-# LLM providers (free tier)
-google-generativeai>=0.3.0
-groq>=0.4.0
-transformers>=4.30.0
-torch>=2.0.0
+# Configuration and environment management
+python-dotenv==1.0.0
+pydantic==2.5.2
+pydantic-settings==2.1.0
 
-# User interfaces
-streamlit>=1.28.0
-click>=8.0.0
+# Async support
+aiofiles==23.2.0
 
-# Utilities and security
-python-dotenv>=1.0.0
-bleach>=6.0.0
-pydantic>=2.5.0
-pydantic-settings>=2.1.0
+# Testing dependencies
+pytest==7.4.3
+pytest-asyncio==0.21.1
+pytest-mock==3.12.0
 
-# Development and testing
-pytest>=7.4.0
-pytest-asyncio>=0.21.0
-black>=23.0.0
-flake8>=6.0.0
-
-# Optional: FastAPI for REST API
-fastapi>=0.100.0
-uvicorn>=0.20.0
+# Development dependencies
+black==23.12.1
+mypy==1.8.0
+pylint==3.0.3
