--- a/requirements.txt
+++ b/requirements.txt
@@ -1,38 +1,11 @@
-# Core LangChain and LangGraph dependencies
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-core==0.1.0
-langgraph==0.0.20
-
-# Google AI integration
-langchain-google-genai==0.0.6
-google-generativeai==0.3.2
-
-# Vector storage and embeddings
-faiss-cpu==1.7.4
-sentence-transformers==2.2.2
-
-# UI framework
-streamlit==1.29.0
-
-# Data processing
-pandas==2.1.4
-numpy==1.24.3
-
-# Configuration and environment management
-python-dotenv==1.0.0
-pydantic==2.5.2
-pydantic-settings==2.1.0
-
-# Async support
-aiofiles==23.2.0
-
-# Testing dependencies
-pytest==7.4.3
-pytest-asyncio==0.21.1
-pytest-mock==3.12.0
-
-# Development dependencies
-black==23.12.1
-mypy==1.8.0
-pylint==3.0.3
+langchain
+langchain-community
+langchain-huggingface
+langgraph
+faiss-cpu
+sentence-transformers
+streamlit
+langchain-google-genai
+pandas
+numpy
+python-dotenv
